--- a/Server_v1/nbproject/project.properties
+++ b/Server_v1/nbproject/project.properties
@@ -33,9 +33,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Server_v1
 excludes=
+file.reference.mjproxy_1.8.zip=lib/mjproxy_1.8.zip
+file.reference.mjsip_1.8.zip=lib/mjsip_1.8.zip
+file.reference.mjsipME_1.8.zip=lib/mjsipME_1.8.zip
+file.reference.mjua_1.8.zip=lib/mjua_1.8.zip
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mjproxy_1.8.zip}:\
+    ${file.reference.mjsip_1.8.zip}:\
+    ${file.reference.mjsipME_1.8.zip}:\
+    ${file.reference.mjua_1.8.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
